--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="icon.png">
     <title>React App</title>
   </head>
   <body>
