--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="icon1.png">
-    <title>React App</title>
+    <title>Box Office</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
