--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="icon1.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
     <title>Box Office</title>
   </head>
   <body>
